my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EIFTYPE/EIFTYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EIFTYPE.dml:12:5: error EIFTYPE: unknown interface type: pointer to const nonexistent_interface_t
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EIFTYPE.dml:17:5: error EIFTYPE: unknown interface type: strange_interface_t
